--- a/goals.html
+++ b/goals.html
@@ -3,71 +3,124 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Goals — Victor Licona</title>
-  <meta name="description" content="Victor Licona — goals in cybersecurity, business, and personal growth." />
-  <link rel="stylesheet" href="./styles.css">
+  <title>Goals | Victor</title>
+  <link rel="stylesheet" href="Styles.css" />
 </head>
 <body>
-  <div class="container">
-    <nav class="nav fadeIn">
-      <div class="brand"><strong>Victor Licona</strong><span>Goals</span></div>
-      <div class="links">
-        <a href="./index.html">Home</a>
-        <a href="./about.html">About</a>
-        <a href="./work.html">Work</a>
-        <a class="active" href="./goals.html">Goals</a>
-        <a href="./contact.html">Contact</a>
-      </div>
-    </nav>
+  <a class="skip" href="#main">Skip to content</a>
 
-    <section class="hero fadeIn">
-      <div class="heroInner">
-        <div class="spark"></div>
-        <h1 class="h1">Goals</h1>
-        <p class="sub">My targets across cybersecurity, TechBuddy, and personal growth.</p>
-        <div class="tags">
-          <div class="tag">Cybersecurity path</div>
-          <div class="tag">Consistent lead flow</div>
-          <div class="tag">Discipline</div>
+  <header>
+    <div class="container nav">
+      <a class="brand" href="index.html">
+        <span class="logo" aria-hidden="true"></span>
+        <span>Victor</span>
+      </a>
+
+      <nav class="navlinks" aria-label="Primary navigation">
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="work.html">Work</a>
+        <a class="active" href="goals.html">Goals</a>
+        <a href="contact.html">Contact</a>
+      </nav>
+    </div>
+  </header>
+
+  <main id="main">
+    <section class="hero">
+      <div class="container hero-grid">
+        <div class="card hero-left">
+          <div class="kicker">
+            <span class="dot" aria-hidden="true"></span>
+            Goals & Focus
+          </div>
+
+          <h1>Clear goals. Consistent habits. Real progress.</h1>
+          <p class="lead">
+            This page keeps me accountable. I keep my goals simple, measurable, and focused.
+          </p>
+
+          <div class="badges">
+            <span class="badge">Consistency</span>
+            <span class="badge">Growth</span>
+            <span class="badge">Discipline</span>
+          </div>
+        </div>
+
+        <aside class="card hero-right">
+          <div class="mini">
+            <h3>Rule</h3>
+            <p>Small wins every day > random big bursts.</p>
+          </div>
+          <div class="mini">
+            <h3>Focus</h3>
+            <p>Do less, better. Then scale up.</p>
+          </div>
+        </aside>
+      </div>
+    </section>
+
+    <section class="section">
+      <div class="container split">
+        <div class="card list">
+          <h3>Short-term (next 30–90 days)</h3>
+          <ul class="ul">
+            <li>Finish and polish this website + keep it updated</li>
+            <li>Build 2–3 projects I can showcase on the Work page</li>
+            <li>Improve cybersecurity fundamentals (networking + security basics)</li>
+            <li>Create a weekly routine I can stick to</li>
+          </ul>
+        </div>
+
+        <div class="card list">
+          <h3>Long-term (6–24 months)</h3>
+          <ul class="ul">
+            <li>Strong portfolio and a clear path in tech/cybersecurity</li>
+            <li>Earn certifications and prove skills with projects</li>
+            <li>Build confidence speaking about my work</li>
+            <li>Keep improving: health, discipline, and mindset</li>
+          </ul>
+        </div>
+      </div>
+
+      <div style="height:14px"></div>
+
+      <div class="container">
+        <div class="section-title">
+          <h2>Habits I’m building</h2>
+          <p>Simple things that compound.</p>
+        </div>
+
+        <div class="grid">
+          <div class="feature">
+            <h3>Daily</h3>
+            <p>1 focused session of learning or building (even if it’s short).</p>
+          </div>
+          <div class="feature">
+            <h3>Weekly</h3>
+            <p>Ship something small: update site, finish a mini project, or write notes.</p>
+          </div>
+          <div class="feature">
+            <h3>Monthly</h3>
+            <p>Review progress, remove distractions, and set the next targets.</p>
+          </div>
         </div>
       </div>
     </section>
 
-    <div class="grid fadeIn">
-      <section class="card">
-        <h2>Cybersecurity</h2>
-        <ul class="list">
-          <li class="item"><strong>Education path</strong><span>TCC for an Associate’s in Cybersecurity, then certifications.</span></li>
-          <li class="item"><strong>Hands-on skill growth</strong><span>Networking fundamentals, systems, labs, and real-world reps.</span></li>
-          <li class="item"><strong>Career momentum</strong><span>Build experience in IT/security while sharpening depth and professionalism.</span></li>
-        </ul>
-      </section>
+    <footer>
+      <div class="container footer-row">
+        <div>© <span id="year"></span> Victor. All rights reserved.</div>
+        <div class="small-links">
+          <a href="work.html">Work</a>
+          <a href="contact.html">Contact</a>
+        </div>
+      </div>
+    </footer>
 
-      <aside class="card">
-        <h2>TechBuddy</h2>
-        <ul class="list">
-          <li class="item"><strong>Trust + reputation</strong><span>Be the go-to tech person: reliable, bilingual, safe.</span></li>
-          <li class="item"><strong>Lead system</strong><span>Consistent leads through reviews, referrals, and process (not luck).</span></li>
-          <li class="item"><strong>Operations</strong><span>Clean tracking, clear workflows, strong communication.</span></li>
-        </ul>
-      </aside>
-    </div>
-
-    <section class="card fadeIn">
-      <h2>Personal</h2>
-      <ul class="list">
-        <li class="item"><strong>Discipline</strong><span>Habits that stick: fitness, learning, consistent execution.</span></li>
-        <li class="item"><strong>Leadership</strong><span>Serve well and lead with integrity, especially in church responsibilities.</span></li>
-        <li class="item"><strong>Go hard, stay structured</strong><span>High effort without chaos—systems that protect progress.</span></li>
-      </ul>
-    </section>
-
-    <div class="footer fadeIn">
-      <div>© <span id="y"></span> Victor Licona</div>
-      <div class="smalllinks"><a href="./work.html">Work</a><a href="./contact.html">Contact</a></div>
-    </div>
-  </div>
-
-  <script>document.getElementById("y").textContent=new Date().getFullYear();</script>
+    <script>
+      document.getElementById("year").textContent = new Date().getFullYear();
+    </script>
+  </main>
 </body>
 </html>
